--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation "androidx.activity:activity-ktx:1.7.0"
 
     implementation 'com.github.bumptech.glide:glide:4.13.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
